minor style changes

--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ h3 {
 img {
     width: 25vw;
     margin: 10px; 
-    border: solid brown 1px; 
+    border: dotted brown 1px; 
     padding: 5px; 
 }
 
